refactor: Reorganize code into modules and remove unused code.